Image Alignment Bug Fix
Added a missing & to Sass fixing an image alignment issue.

--- a/wp-content/themes/HS-custom/style.scss
+++ b/wp-content/themes/HS-custom/style.scss
@@ -1199,11 +1199,11 @@ a,a:visited,a:hover,a:active {
 				margin-right: 1rem;
 				margin-bottom: 1rem;
 				
-				.alignleft {
+				&.alignleft {
 					float: left;
 					margin-right: 1rem;
 				}
-				.alignright {
+				&.alignright {
 					float: right;
 					margin-left: 1rem;
 				}
